# test_shambhala_reduced_prereq

./: CMakeLists.txt  Dockerfile.Ubuntu.16.04.opensource  README.md  install_reduced_prereq.sh  install_reduced_prereq_with_comments.sh  shambhala_test_script.sh
simple_example/: CMakeLists.txt  main.cc  simple_example_driver.sh  simple_example_prereq.sh  simple_example_prereq_with_comments.sh
